Fixes alignment for very wide screens and stretches pictures to text column width

--- a/page-styles.css
+++ b/page-styles.css
@@ -52,3 +52,7 @@ a {
 .topbar a {
   text-decoration: none;
 }
+
+figure.kg-card > img {
+  width: 100%;
+}
